Publish OrderCreateEvent to Kafka after order creation